--- a/MenuTest/MainPage.xaml
+++ b/MenuTest/MainPage.xaml
@@ -41,6 +41,12 @@
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Fill" />
+
+            <Button
+                x:Name="PopupBtn"
+                Text="Click for Popup" 
+                Clicked="OnPopupClicked"
+                HorizontalOptions="Fill" />
         </VerticalStackLayout>
     </ScrollView>
 
